# smartbots-etl-facturas

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_v1_ecosistema.md  Sin título.md
.sisyphus/: boulder.json
.sisyphus/drafts/: etl-infra-redesign.md
.sisyphus/notepads/append-only-excel-write/: decisions.md  (+1 more)
.sisyphus/plans/: refactor_etl_extractors.md
drive-download-20260209T143730Z-1-001/AI Research/: Briefing_ Proyecto de Automatización de Procesos Smartbots.md  Plan Técnico de Desarrollo e Implementación_ Ecosistema de Automatización Smartbots.md  Plan Técnico_ Ecosistema de Automatización Loblo y Consolidación de Facturas.md  Tareas de Automatización de Operaciones y Facturación - Table 1.csv
smartbots-etl/: .gitignore  AGENTS.md  Dockerfile  PLAN_INFRAESTRUCTURA.md  README.md  pyproject.toml
smartbots-etl/.sisyphus/plans/: append-only-excel-write.md
smartbots-etl/configs/: configuration.yaml  configuration.yaml.template
smartbots-etl/scripts/: authenticate.py  check_drive_structure.py  run_consolidation.py  test_emails.py  test_oauth.py
smartbots-etl/src/: __init__.py
smartbots-etl/src/application/: AGENTS.md  __init__.py  config.py  dtos.py  transformers.py
smartbots-etl/src/application/ports/: __init__.py  drive_repository.py  excel_handler.py  notifier.py  tracker.py
smartbots-etl/src/application/use_cases/: consolidate_invoices.py
smartbots-etl/src/domain/: AGENTS.md  __init__.py  entities.py  exceptions.py  value_objects.py
smartbots-etl/src/infrastructure/: AGENTS.md  calamine_extractor.py  drive_path_resolver.py  excel_handler.py  file_lifecycle_manager.py  gmail_notifier.py  google_drive_adapter.py  logging_config.py  oauth_gmail_notifier.py  oauth_google_drive_adapter.py  official_format_extractor.py  sqlite_tracker.py
smartbots-etl/src/templates/: ETL_Consolidacion_Error.html  ETL_Consolidacion_Exito.html  ETL_Consolidacion_Parcial.html  ETL_Consolidacion_Vacio.html
smartbots-etl/tests/: AGENTS.md  conftest.py
smartbots-etl/tests/integration/: conftest.py  test_consolidation_flow.py
smartbots-etl/tests/unit/: test_config.py  test_entities.py  test_gmail_notifier.py  test_path_resolver.py  test_sqlite_tracker.py  test_transformers.py  test_use_case.py
(+2 files in other folders)
