[project]
name = "smartbots-etl"
version = "0.1.0"
description = "ETL de consolidación de facturas XLSX via Google Drive"
requires-python = ">=3.12"
dependencies = [
    "uv",
    "pandas>=3.0",
    "openpyxl>=3.1.5",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.48.0",
    "structlog>=25.5.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "fastexcel>=0.8.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "uv>=0.9.26",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pandas-stubs>=2.2",
    "debugpy>=1.8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"
markers = ["integration: tests que requieren I/O real"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
